--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,24 @@
 <resources>
-    <string name="app_name">Final Project</string>
+    <string name="app_name">TestApplication</string>
+    <string name="title_home">Home</string>
+    <string name="title_history">History</string>
+    <string name="title_dashboard">History</string>
+    <string name="title_settings">Settings</string>
+    <string name="add">"Add"</string>
+    <string name="amount"> "Amount: %d Oz."</string>
+    <string name="date">"Date: %s"</string>
+    <string name="mode">"Method: %s" </string>
+    <string name="home_daily">"Daily Total: %,.1f Oz./%s Oz.</string>
+    <string name="edit_goal">"Edit Goal"</string>
+
+    <string-array name="date_array">
+        <item>Last 7 days</item>
+        <item>Last 2 weeks</item>
+        <item>Last Month</item>
+    </string-array>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="daily_goal">Daily Goal:</string>
+    <string name="oz">Oz.</string>
+    <string name="notifications">Notifications</string>
 </resources>
